Praktikum.css
.Überschrift{
    color: black;
    text-align:center;
    font-weight: 1100;
    font-size: xx-large;
    margin-top: 70px;
    margin-right:50px;
    font-family: Arial, Helvetica, sans-serif;


}
.Text{
    font-weight: 500;
    font-size: x-large;
    text-align: center;
    margin-left: 100px;
    margin-right:100px;
    margin-top:20px;
    padding:5px;
    margin-bottom:50px;
    line-height: 1.5;

    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    
}
.Button1{
    width: 50px;
    height:auto;
    border: 3px solid #d3d3d3;
    border-radius:10px;
    margin-left:10px;
    text-decoration: none;
    background-color: #FF00FF;
    padding: 30px;
    margin-top: 15px;

}
.Button2,.Button3{
    width: 50px;
    height: 40px;
    border:  3px solid #d3d3d3;
    border-radius: 10px;
    margin-left:20px;
    margin-top:20px;
    text-decoration: none;
    background-color: #FF00FF;
    padding: 30px;


}
.Wochen{
    font-size:larger;
    margin-bottom:50px;
    font-family: Arial, Helvetica, sans-serif;

}
.bg{
    outline: auto;
    outline-width: 3px;
    border-radius: 7px;
    margin-left: 30px;
}
body{
    background-color: beige;
}
.nummer1, .nummer2, .nummer3{
    color: blueviolet;
    text-align: center;
    font-size: 50px;
    margin-bottom: 3%;
    margin-top: 10px;
    font-family: Arial, Helvetica, sans-serif;

}

.Mainpage{
    width: 50px;
    height:10px;
    border: 1.5px solid black;
    border-radius:10px;
    margin-left:3px;
    text-decoration: none;
    padding: 5px;
    background-color: blueviolet;
    font-family: Arial, Helvetica, sans-serif;
    font-size: medium;
    position: static;
    color: beige;
}
.wochetext{
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    text-align: left;
    padding-left: 65px;
    margin:auto;
    font-size: x-large;
    padding-top: 20px;
    line-height: 1.5;
    
}
th{
    color:blueviolet;
    font-family: cursive;
    font-weight: bold;

}
td{
    font-family: cursive;
}
.wochenplan{
    text-align: center;
    position: sticky;
    padding-left:20px;
    position: static;
    font-size: larger;

}
.Hauptseite{
    font-family: Arial, Helvetica, sans-serif;

}
.button_text_woche1{
    background-color: #04AA6D; /* Green */
    border: 2px solid red;
    color: white;
    padding: 15px 32px;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    text-align: center;
    margin-bottom:10px;
}
.button_text_woche1:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
}

body {
    background-color: var(--bg-color);
    color: var(--text-color);
    transition: background-color 0.5s, color 0.5s;
} 

   .dark-mode body {
    --bg-color:#404040;
    --text-color: beige;
}

   .light-mode body {
    --bg-color: beige;
    --text-color:  black;
}
.Button1:hover, .Button2:hover, .Button3:hover{
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.30), 0 17px 50px 0 rgba(0,0,0,0.25);
}
.night_shift_button{
    height: 60px;
    width: 60px;
    color:aqua;
}
.night_shift_button:hover{
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.30), 0 17px 50px 0 rgba(0,0,0,0.25);    
}
.nebeneinander {
    font-size: 0;
   }
   
   .wochenplan, .text_woche_1 {
    display: inline-block;
    padding: 10px;
    margin: 5px;
    vertical-align: top;
    font-size: larger;
    font-family: Arial, Helvetica, sans-serif;

   }
.dark_mode_button{
    color: beige;
    background-color: blueviolet;
    height: auto;
    width: auto;

    
    
}
.vorherSeite{
    margin-top:15px;
}
.nächsteSeite{
    margin-left: ;
}

